--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto= update
 spring.servlet.multipart.max-file-size=8MB
 spring.servlet.multipart.max-request-size=8MB
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=BALCAMGYM@gmail.com
+spring.mail.password=lmxjcstkazsodvwb
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
