agregada la funcion para comprar con la app del homebanking (de aleTorres)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.servlet.multipart.max-request-size=8MB
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=BALCAMGYM@gmail.com
-spring.mail.password=lmxjcstkazsodvwb
+spring.mail.username=balcamsgym@gmail.com
+spring.mail.password=hikzedimpoanlowf
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
